Added CLI Scrolling Functionality & Punctuation Character Registration

--- a/index.html
+++ b/index.html
@@ -74,11 +74,16 @@
             <li id="statusMsg" style="float: right; margin-right: 50px;"></li>
           </ul>
       </div>
-      <canvas id="display"
-              width="500px"
-              height="500px"
-              tabindex="3">
-      </canvas>
+
+      <div class="canvasWrapper">
+         <canvas id="display"
+            width="500px"
+            height="500px"
+            tabindex="3">
+         </canvas>
+      </div>
+      
+      
    </div>
 
    <div id="divLog" style="margin-left:520px;">
