--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip0.js"></script>
+   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip0.js"></script> -->
    
 </head>
 
@@ -44,7 +44,7 @@
              id = "btnStartOS"
              name="brnStartOS"
              class="normal_button"
-             value="Start"
+             value="START"
              tabindex="0"
              onclick="TSOS.Control.hostBtnStartOS_click(this);">
 
@@ -53,7 +53,7 @@
              name="brnHaltOS"
              class="normal_button"
              disabled="disabled"
-             value="Halt"
+             value="HALT"
              tabindex="1"
              onclick="TSOS.Control.hostBtnHaltOS_click(this);">
 
@@ -62,7 +62,7 @@
              name="brnReset"
              class="normal_button"
              disabled="disabled"
-             value="Reset"
+             value="RESET"
              tabindex="2"
              onclick="TSOS.Control.hostBtnReset_click(this);">
    </div>
@@ -75,20 +75,16 @@
           </ul>
       </div>
 
-      <div class="canvasWrapper">
-         <canvas id="display"
-            width="500px"
-            height="500px"
-            tabindex="3">
-         </canvas>
-      </div>
-      
-      
+      <canvas id="display"
+         width="500px"
+         height="500px"
+         tabindex="3">
+      </canvas>  
    </div>
 
    <div id="divLog" style="margin-left:520px;">
       <label>
-         Host Log
+         HOST LOG
          <br>
          <textarea name="taHostLog"
                    id  ="taHostLog"
@@ -100,7 +96,7 @@
 
    <div id="divUserProgramInput" style="margin-left:520px;">
       <label>
-         User Program Input
+         USER PROGRAM INPUT
          <br>
          <textarea name="taProgramInput"
                    id  ="taProgramInput"
