Implemented Step Execution Functionality

--- a/index.html
+++ b/index.html
@@ -71,6 +71,24 @@
                 value="RESET"
                 tabindex="2"
                 onclick="TSOS.Control.hostBtnReset_click(this);">
+
+         <input type="button"
+                id = "btnStep"
+                name="brnStep"
+                class="normal_button"
+                disabled="disabled"
+                value="ONE STEP"
+                tabindex="3"
+                onclick="TSOS.Control.hostBtnStep_click(this);">
+         
+         <input type="button"
+                id = "btnNext"
+                name="brnNext"
+                class="normal_button"
+                disabled="disabled"
+                value=">"
+                tabindex="4"
+                onclick="TSOS.Control.hostBtnNext_click(this);">
       </div>
    </section>
    
