UI Adjustments + Code Clean up

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip0.js"></script> -->
+   <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip2.js"></script>
    
 </head>
 
@@ -113,7 +113,7 @@
 
          </section> <!-- OS Console -->
          
-         <section class="hardware-display" style="margin: 0 auto;">
+         <section class="hardware-display">
             <div class="hardware-wrapper">
                <div class="flex-wrapper" style="padding: 5px;">
                   <div id="divMemory">
@@ -127,7 +127,7 @@
                   </div>
                </div>
                
-               <div style="padding: 5px; margin: 0 auto; margin-right: 10%;">
+               <div style="padding-left: 50px;">
                   <div class="div-block" id="divPCB">
                      <label>
                         PCB DISPLAY
