Implemented ReadyQueue + Resident List + Created Dispatcher

--- a/index.html
+++ b/index.html
@@ -190,11 +190,12 @@
                   
                   <div class="div-block" id="divRQ">
                      <label>
-                        READY QUEUE DISPLAY
+                        PROCESS DISPLAY
                         <br>
                         <table id="tableRQ"> <!-- Will need to add PID in future implementations -->
                            <thead>
                               <tr>
+                                 <th>PID</th>
                                  <th>State</th>
                                  <th>PC</th>
                                  <th>Acc</th>
