Bug Fixes + Shell Quantum + GUI Updates

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip2.js"></script> -->
+   <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script>
    
 </head>
 
@@ -245,13 +245,17 @@
       </div>
    </section> <!-- Information + Input Display -->
    
-   <p class="footerText" style="clear:both;">
-      <br>
-      Copyright &copy; 2008 - 2019 No Rights Reserved.
-      <br>
-      Reproduction is inhibited without the express written consent of
-      Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
-   </p>
+   <div class="footer-div" style="clear:both;">
+      <p style="text-align: center; font-size: 13px; font-weight: 700; margin-bottom: 0;">COPYRIGHT &copy; 2020 CHRISTIAN SALTARELLI.</p>
+      <ul class="footer-list">
+         <li class="footer-element">
+            <p class="hand-wave">👋</p>
+          </li>
+         <li class="footer-element"><a class="footer-link" href="https://casaltarelli.com" alt="Personal Website">PORTFOLIO</a></li>
+         <li class="footer-element footer-divider">|</li>
+         <li class="footer-element"><a class="footer-link" href="https://github.com/casaltarelli" alt="GitHub Repository">GITHUB</a></li>
+      </ul>
+   </div>
 </div>
 </body>
 </html>
