--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script>
+   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script> -->
    
 </head>
 
@@ -199,6 +199,7 @@
                            <thead>
                               <tr>
                                  <th>PID</th>
+                                 <th>Priority</th>
                                  <th>State</th>
                                  <th>PC</th>
                                  <th>Acc</th>
@@ -248,10 +249,9 @@
    <div class="footer-div" style="clear:both;">
       <p style="text-align: center; font-size: 13px; font-weight: 700; margin-bottom: 0;">COPYRIGHT &copy; 2020 CHRISTIAN SALTARELLI.</p>
       <ul class="footer-list">
-         <li class="footer-element">
-            <p class="hand-wave">👋</p>
-          </li>
          <li class="footer-element"><a class="footer-link" href="https://casaltarelli.com" alt="Personal Website">PORTFOLIO</a></li>
+         <li class="footer-element footer-divider">|</li>
+         <li class="footer-element"><a class="footer-link" href="https://linkedin.com/in/casaltarelli/" alt="LinkedIn">LINKEDIN</a></li>
          <li class="footer-element footer-divider">|</li>
          <li class="footer-element"><a class="footer-link" href="https://github.com/casaltarelli" alt="GitHub Repository">GITHUB</a></li>
       </ul>
