Developed Hard Drive Display for GUI

--- a/index.html
+++ b/index.html
@@ -162,8 +162,36 @@
                      </label>
                   </div>
                </div>
+
+               <div class="flex-wrapper" style="padding:5px;">
+                  <div class="div-block" id="divHD">
+                     <label>
+                        HARD DRIVE DISPLAY
+                        <br>
+                        <div id="table-wrapper">
+                           <table id="tableHD">
+                              <col span="1" style="width: 70px; border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
+                              <col span="1" style="width: 50px; border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
+                              <col span="1" style="width: 70px; border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
+                              <col style="border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
+                              <thead id="theadHD">
+                                 <tr>
+                                    <th>Key</th>
+                                    <th>Filled</th>
+                                    <th>Pointer</th>
+                                    <th>Data</th>
+                                 </tr>
+                              </thead>
+                              <tbody>
+                                 <tr></tr>
+                              </tbody>
+                           </table>
+                        </div>
+                     </label>
+                  </div>
+               </div>
                
-               <div style="padding-left: 50px;">
+               <div style="padding:5px;">
                   <div class="div-block" id="divCPU">
                      <label>
                         CPU DISPLAY
@@ -216,6 +244,28 @@
                         </table>
                      </label>
                   </div>
+
+                  <!-- <div class="div-block" id="divHD">
+                     <label>
+                        HARD DRIVE DISPLAY
+                        <br>
+                        <div id="table-wrapper">
+                           <table id="tableHD">
+                              <thead>
+                                 <tr>
+                                    <th>Key</th>
+                                    <th>Filled</th>
+                                    <th>Pointer</th>
+                                    <th>Data</th>
+                                 </tr>
+                              </thead>
+                              <tbody>
+                                 <tr></tr>
+                              </tbody>
+                           </table>
+                        </div>
+                     </label>
+                  </div> -->
             </div>
          </section> <!-- Hardware Display -->
       </div> <!-- OS Wrapper -->
