Subtle Hard Drive Display Adjustments

--- a/index.html
+++ b/index.html
@@ -168,24 +168,25 @@
                      <label>
                         HARD DRIVE DISPLAY
                         <br>
-                        <div id="table-wrapper">
-                           <table id="tableHD">
-                              <col span="1" style="width: 70px; border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
-                              <col span="1" style="width: 50px; border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
-                              <col span="1" style="width: 70px; border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
-                              <col style="border-left: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9;"/>
-                              <thead id="theadHD">
-                                 <tr>
-                                    <th>Key</th>
-                                    <th>Filled</th>
-                                    <th>Pointer</th>
-                                    <th>Data</th>
-                                 </tr>
-                              </thead>
-                              <tbody>
-                                 <tr></tr>
-                              </tbody>
-                           </table>
+                        <div id="table-container">
+                           <div id="table-wrapper">
+                              <table id="tableHD">
+                                 <col span="1" style="width: 70px;"/>
+                                 <col span="1" style="width: 50px;"/>
+                                 <col span="1" style="width: 70px;"/>
+                                 <thead id="theadHD">
+                                    <tr>
+                                       <th>Key</th>
+                                       <th>Filled</th>
+                                       <th>Pointer</th>
+                                       <th>Data</th>
+                                    </tr>
+                                 </thead>
+                                 <tbody>
+                                    <tr></tr>
+                                 </tbody>
+                              </table>
+                           </div>
                         </div>
                      </label>
                   </div>
