Fixed Directory Looping Bug + Developed ability to load into HDD

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                               <tr>
                                  <th>PID</th>
                                  <th>Priority</th>
+                                 <th>Location</th>
                                  <th>State</th>
                                  <th>PC</th>
                                  <th>Acc</th>
